// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Helpers/Content Paddings Content containers 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        height: 2rem;
        max-width: 100%;
        background: #69ADF8;
    }
    .demo div {
        height: 100%;
        width: 100%;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Responsive
  </h3>
  

  <div
    class="demo sap-content-paddings-container"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size SM
  </h3>
  

  <div
    class="demo sap-content-paddings-container-sm"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size MD
  </h3>
  

  <div
    class="demo sap-content-paddings-container-md"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size LG
  </h3>
  

  <div
    class="demo sap-content-paddings-container-lg"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size XL
  </h3>
  

  <div
    class="demo sap-content-paddings-container-xl"
  >
    
    
    <div />
    

  </div>
  

</div>
`;

exports[`Storyshots Helpers/Content Paddings Home (content area) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        height: 2rem;
        max-width: 100%;
        background: #69ADF8;
    }
    .demo div {
        height: 100%;
        width: 100%;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Responsive
  </h3>
  

  <div
    class="demo sap-content-paddings-home"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size SM
  </h3>
  

  <div
    class="demo sap-content-paddings-home-sm"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size MD
  </h3>
  

  <div
    class="demo sap-content-paddings-home-md"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size LG
  </h3>
  

  <div
    class="demo sap-content-paddings-home-lg"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Size XL
  </h3>
  

  <div
    class="demo sap-content-paddings-home-xl"
  >
    
    
    <div />
    

  </div>
  

</div>
`;
